# housing-predit-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train.py
.github/workflows/: ci.yml  train.yml
app/: __init__.py  config.py  main.py  schemas.py
app/core/: errors.py  logging.py  middleware.py
app/ml/: loader.py  predictor.py
app/ml/artifacts/: metadata.json  model.pkl
app/routes/: health.py  model_info.py  predict.py
tests/: test_api.py
