[project]
name = "housing-price-api"
version = "1.0.0"
description = "Housing price prediction ML API (FastAPI + scikit-learn LinearRegression)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "joblib>=1.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
